# Point_Cloud_Tutorial

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile_cpu  Dockerfile_cs  Dockerfile_gpu  README.md  cpp_settings.sh  devcontainer.json  ninja.sh  optional_setting.sh  pip.sh  pip_cpu.sh  poetry.sh  python_packages.sh
cpp/: 1.cpp  2.cpp  CMakeLists.txt  README.md
cpp/examples/registration/: CMakeLists.txt  README.md  exe.sh  main.cpp
cpp/examples/registration/include/: icp.hpp  io.hpp  operator.hpp  transformation.hpp  utils.hpp
cpp/features/: CMakeLists.txt  pfh.cpp
data/: README.md  bunny_pc.ply  bunny_vox.npy  redwood_indoor.yaml  sun3d
docker/: Dockerfile  README.md
docs/: README.md  nns.md  slam.md  visualization.md
examples/: preprocessing.py
julia/: nns.jl
julia/tutlibs/: nns.jl  operator.jl  registration.jl
libs/: logs.py
libs/io/: ply.py
libs/models/: scfnet.py
libs/modules/: layer.py  scf_module.py
python/: README.md  affine_transformations.ipynb  basic_code.ipynb  camera_projection.ipynb  characteristic.ipynb  competition.ipynb  constructing.ipynb  converting.ipynb  coodinate_system.ipynb  coordinate_system.ipynb  dataset.ipynb  deep_learning.ipynb  downsampling.ipynb  features.ipynb  handcrafted_feature.ipynb  nns.ipynb  normal_estimation.ipynb  normals.ipynb  preprocessing.ipynb  reconstruction.ipynb  registration.ipynb  sampling.ipynb  slam.ipynb  test.py  train.py  transformations.ipynb  tree_structure.ipynb  visualiation.ipynb  visualization.ipynb
python/cu_cpp/: bindings.cpp  cuda_utils.cuh  torch_utils.hpp
python/datasets/: README.md  path.py  pix3d.ipynb  redwood_3dscan.ipynb  redwood_indoor.ipynb  scannet.ipynb  sun3d.ipynb
python/deep_learning/: README.md  deep_learning.ipynb  path.py  pointnet.ipynb  pointnet.py  pointnet2.ipynb  pointnet2.py  (+4 more)
(+54 files in other folders)
